packages/wasm/ballerina-lang-go/parser/testdata/tokens/javainterop/negative/method_sig_not_match4.token
(import 6 0x00 ())
(ident, "ballerina" 9 0x00 ())
(/ 1 0x00 ())
(ident, "jballerina" 10 0x00 ())
(. 1 0x00 ())
(ident, "java" 4 0x00 ())
(; 1 0x00 ())
(public 6 0x00 ())
(type 4 0x00 ())
(ident, "Employee" 8 0x00 ())
(record 6 0x00 ())
({ 1 0x00 ())
(string 6 0x00 ())
(ident, "name" 4 0x00 ())
(= 1 0x00 ())
(string, """" 2 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(; 1 0x00 ())
(public 6 0x00 ())
(class 5 0x00 ())
(ident, "Person" 6 0x00 ())
({ 1 0x00 ())
(int 3 0x00 ())
(ident, "age" 3 0x00 ())
(= 1 0x00 ())
(int, "9" 1 0x00 ())
(; 1 0x00 ())
(public 6 0x00 ())
(function 8 0x00 ())
(ident, "init" 4 0x00 ())
(( 1 0x00 ())
(int 3 0x00 ())
(ident, "age" 3 0x00 ())
() 1 0x00 ())
({ 1 0x00 ())
(ident, "self" 4 0x00 ())
(. 1 0x00 ())
(ident, "age" 3 0x00 ())
(= 1 0x00 ())
(ident, "age" 3 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(} 1 0x00 ())
(public 6 0x00 ())
(function 8 0x00 ())
(ident, "acceptRefTypesAndReturnMapWhichThrowsCheckedException" 53 0x00 ())
(( 1 0x00 ())
(ident, "Person" 6 0x00 ())
(ident, "a" 1 0x00 ())
(, 1 0x00 ())
([ 1 0x00 ())
(int 3 0x00 ())
(, 1 0x00 ())
(string 6 0x00 ())
(, 1 0x00 ())
(ident, "Person" 6 0x00 ())
(] 1 0x00 ())
(ident, "b" 1 0x00 ())
(, 1 0x00 ())
(int 3 0x00 ())
(| 1 0x00 ())
(string 6 0x00 ())
(| 1 0x00 ())
(ident, "Employee" 8 0x00 ())
(ident, "c" 1 0x00 ())
(, 1 0x00 ())
(error 5 0x00 ())
(ident, "d" 1 0x00 ())
(, 1 0x00 ())
(any 3 0x00 ())
(ident, "e" 1 0x00 ())
(, 1 0x00 ())
(anydata 7 0x00 ())
(ident, "f" 1 0x00 ())
(, 1 0x00 ())
(ident, "Employee" 8 0x00 ())
(ident, "g" 1 0x00 ())
() 1 0x00 ())
(returns 7 0x00 ())
(map 3 0x00 ())
(< 1 0x00 ())
(any 3 0x00 ())
(> 1 0x00 ())
(= 1 0x00 ())
(@ 1 0x00 ())
(ident, "java" 4 0x00 ())
(: 1 0x00 ())
(ident, "Method" 6 0x00 ())
({ 1 0x00 ())
(ident, "'class" 6 0x00 ())
(: 1 0x00 ())
(string, ""org/ballerinalang/nativeimpl/jvm/tests/StaticMethods"" 54 0x00 ())
(} 1 0x00 ())
(external 8 0x00 ())
(; 1 0x00 ())
(2 0 0x00 ())
